<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <include
        android:id="@+id/actionBar"
        layout="@layout/custom_actionbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/loutFooter"
        android:layout_below="@+id/actionBar"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/sortLout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/green"
            android:gravity="center">

            <ImageView
                android:id="@+id/imgList"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_list" />

            <com.riyadhbank.Custom.RBRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/imgList"
                android:layout_toRightOf="@+id/imgList"
                android:gravity="center_vertical"
                android:text="@string/sort"
                android:textColor="@color/white"
                android:textSize="14dp" />

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/offerList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <include
        android:id="@+id/loutFooter"
        layout="@layout/layout_footer"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/D_65dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/chandLout"
            android:layout_width="@dimen/D_70dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/icn_chand_grey"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lout_favourite"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_weight="0.18"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_favourite"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/D_30dp"
                    android:layout_marginTop="@dimen/D_14dp"
                    android:padding="@dimen/D_2dp"
                    android:src="@drawable/ic_favourite" />

                <com.riyadhbank.Custom.RBRegularTextView
                    android:id="@+id/txt_favourite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/favourite"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/D_12dp" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

    <View
        android:id="@+id/blackView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#50000000"
        android:visibility="gone"/>

    <FrameLayout
        android:id="@+id/sortDialogLout"
        android:layout_width="match_parent"
        android:layout_height="154dp"
        android:layout_alignParentBottom="true"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:background="@color/grey"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/nearLout"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgNear"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="25dp"
                    android:layout_marginStart="25dp"
                    android:padding="5dp" />

                <com.riyadhbank.Custom.RBRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/D_10dp"
                    android:layout_marginStart="@dimen/D_10dp"
                    android:gravity="center_vertical"
                    android:text="@string/nearest"
                    android:textColor="@color/green"
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/featuredLout"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgfeatured"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="25dp"
                    android:layout_marginStart="25dp"
                    android:padding="5dp" />

                <com.riyadhbank.Custom.RBRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/D_10dp"
                    android:layout_marginStart="@dimen/D_10dp"
                    android:gravity="center_vertical"
                    android:text="@string/Featured_Deals"
                    android:textColor="@color/green"
                    android:textSize="18dp" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:visibility="gone">

                <com.riyadhbank.Custom.RBRegularTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/cancel"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/themeColor"/>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnDone"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/circle_shadow">

            <com.riyadhbank.Custom.RBRegularTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/done"
                android:textColor="@color/white" />

        </LinearLayout>

    </FrameLayout>

</RelativeLayout>