<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyTint">

    <include
        android:id="@+id/actionBar"
        layout="@layout/custom_actionbar" />

    <LinearLayout
        android:id="@+id/loutChangePassword"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/actionBar"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/img_change_pass" />

        <com.riyadhbank.Custom.RBRegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_pass_txt"
            android:gravity="center"
            android:textColor="@color/themeColorTint"
            android:textSize="@dimen/D_18dp"
            android:lineSpacingExtra="-5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_theme"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_con_pass_white"
                android:tint="@color/themeColor"/>

            <com.riyadhbank.Custom.RBRegularEditText
                android:id="@+id/edtNewPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="12dp"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/new_password"
                android:singleLine="true"
                android:textColor="@color/themeColor"
                android:textColorHint="@color/themeColorTint"
                android:textSize="14dp"
                android:inputType="textPassword"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_theme"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/password"
                android:tint="@color/themeColor"/>

            <com.riyadhbank.Custom.RBRegularEditText
                android:id="@+id/edtConPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="12dp"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/con_password"
                android:singleLine="true"
                android:textColor="@color/themeColor"
                android:textColorHint="@color/themeColorTint"
                android:textSize="14dp"
                android:inputType="textPassword"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_theme_solid">

            <com.riyadhbank.Custom.RBRegularTextView
                android:id="@+id/btnChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/Submit"
                android:textColor="@color/white"
                android:textSize="18dp" />

        </LinearLayout>

    </LinearLayout>

    <include
        android:id="@+id/loutFooter"
        layout="@layout/layout_footer"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true" />

    <FrameLayout
        android:id="@+id/footerChand"
        android:layout_width="match_parent"
        android:layout_height="@dimen/D_65dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/chandLout"
            android:layout_width="@dimen/D_70dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/icn_chand_grey"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lout_favourite"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_weight="0.18"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_favourite"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/D_30dp"
                    android:layout_marginTop="@dimen/D_14dp"
                    android:padding="@dimen/D_2dp"
                    android:src="@drawable/ic_favourite" />

                <com.riyadhbank.Custom.RBRegularTextView
                    android:id="@+id/txt_favourite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/favourite"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/D_12dp" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</RelativeLayout>