<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/footerMainLout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/D_56dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lout_home"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.18"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_home"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/D_30dp"
                    android:padding="@dimen/D_2dp"
                    android:src="@drawable/ic_home" />

                <com.riyadhbank.Custom.RBRegularTextView
                    android:id="@+id/txt_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/home"
                    android:textColor="@color/grey"
                    android:textSize="12dp"
                    android:paddingRight="2dp"
                    android:paddingLeft="2dp"
                    android:paddingStart="2dp"
                    android:paddingEnd="2dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lout_profile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.18"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_profile"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/D_30dp"
                    android:padding="@dimen/D_2dp"
                    android:src="@drawable/ic_profile" />

                <com.riyadhbank.Custom.RBRegularTextView
                    android:id="@+id/txt_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/profile"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/D_12dp"
                    android:paddingRight="2dp"
                    android:paddingLeft="2dp"
                    android:paddingStart="2dp"
                    android:paddingEnd="2dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Lout_Cart"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.21"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lout_about_us"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.18"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/img_about"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/D_30dp"
                    android:padding="@dimen/D_2dp"
                    android:src="@drawable/ic_about_us" />


                <com.riyadhbank.Custom.RBRegularTextView
                    android:id="@+id/txt_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/about_us"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/D_12dp"
                    android:paddingRight="2dp"
                    android:paddingLeft="2dp"
                    android:paddingStart="2dp"
                    android:paddingEnd="2dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lout_logout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.18"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_logout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/D_30dp"
                    android:padding="@dimen/D_2dp"
                    android:src="@drawable/ic_logout" />

                <com.riyadhbank.Custom.RBRegularTextView
                    android:id="@+id/txt_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/logout"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/D_12dp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>